@@ -23,4 +23,4 @@ requires:
   Tk: 0
   Tk::DirSelect: 0
   Tk::Tree: 0
-version: 1.311
+version: 1.312
